--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -12,3 +12,146 @@ body {
     align-items: center;
     font-family: 'Roboto', sans-serif;;
 }
+
+.header {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+}
+
+.container {
+    width: 100%;
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+.header__inner {
+    display: flex;
+    flex-direction: row;
+       
+    margin-top: 21px;
+    margin-bottom: 18px;
+}
+
+.nav {
+    
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1.7px;
+}
+
+.nav a {
+    text-decoration: none;
+    color: #212A2F;
+    margin-left: 27px;
+}
+
+.nav__2 {
+    
+    font-size: 12px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 1.7px;
+}
+
+.nav__2 a {
+    text-decoration: none;
+    color: #212A2F;
+    margin-left: 27px;
+}
+
+
+
+/* MAIN */
+.section__main {
+    width: 100%;
+    height: 100vh;
+
+    background: url("../images/cover.jfif") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;;
+} 
+
+.main {
+    display: inline-block;
+    padding-top: 504px;
+    padding-left: 54px;
+
+}
+
+.main__title {
+    font-size: 48px;
+    font-weight: 700;
+    letter-spacing: 0.7px;
+    line-height: 62.88px;
+    color: #fff;
+}
+
+.main__subtitle {
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+    line-height: 24px;
+    color: #fff;
+    padding-top: 11px;
+}
+
+/* BUTTONS */
+.main__buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 384px;
+    margin-top: 24px;
+}
+
+.main__buttons a {
+    text-decoration: none;
+}
+
+.button__1 {
+    width: 180px;
+    height: 48px;
+    background-color: #fff;
+}
+
+.button__1:hover {
+    width: 180px;
+    height: 48px;
+    background-color:black;
+}
+
+.button__2 {
+    width: 180px;
+    height: 48px;
+    background-color: #fff;
+}
+
+.button__2:hover {
+    width: 180px;
+    height: 48px;
+    background-color:black;
+}
+
+.button__text {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #212A2F;
+    text-align: center;
+    padding: 16px 32px;
+}
+
+.button__text:hover {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #fff;
+    text-align: center;
+    padding: 16px 32px;
+}
