--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -21,8 +21,7 @@ body {
 }
 
 .container {
-    width: 100%;
-    max-width: 1440px;
+    width: 1440px;
     margin: 0 auto;
 }
 
@@ -154,4 +153,106 @@ body {
     color: #fff;
     text-align: center;
     padding: 16px 32px;
+}
+
+/* COVER */
+.cover {
+    width: 100%;
+    height: 542px;
+
+    background: url("../images/cover-2.jfif") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+
+    margin-top: 142px;
+}
+
+/* SECTION SEASONS */
+.section__seasons {
+    width: 100%;
+    margin-top: 52px;
+}
+
+.seasons__item {
+   
+   justify-content: center;
+}
+
+.seasons__title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 41,92px; 
+    letter-spacing: 0.5px;
+    text-align: center;
+    color:  #212A2F;
+}
+
+.seasons__subtitle {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px; 
+    letter-spacing: 0.5px;
+    text-align: center;
+    color:  #212A2F;
+
+    padding-top: 54px;
+}
+
+/* BUTTONS */
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 384px;
+    margin-top: 30px;
+    margin-left: 528px;
+}
+
+.buttons a {
+    text-decoration: none;
+}
+
+.btn__1 {
+    width: 180px;
+    height: 48px;
+    background-color:#212A2F;
+}
+
+.btn__1:hover {
+    width: 180px;
+    height: 48px;
+    background-color:rgb(204, 156, 110);
+}
+
+.btn__2 {
+    width: 180px;
+    height: 48px;
+    background-color:#212A2F;
+}
+
+.btn__2:hover {
+    width: 180px;
+    height: 48px;
+    background-color:rgb(204, 156, 110);
+}
+
+.btn__text {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #fff;
+    text-align: center;
+    padding: 18px 32px;
+}
+
+.btn__text:hover {
+    font-size: 14px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #212A2F;
+    text-align: center;
+    padding: 18px 32px;
 }
