add section collection

--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -169,6 +169,7 @@ body {
 
 /* SECTION SEASONS */
 .section__seasons {
+    display: block;
     width: 100%;
     margin-top: 52px;
 }
@@ -255,4 +256,59 @@ body {
     color: #212A2F;
     text-align: center;
     padding: 18px 32px;
+}
+
+/* COLLECTION */
+.section__collection {
+    width: 1440px;
+    margin-top: 120px;
+}
+
+.container__coll {
+    margin: 0 102px;
+}
+
+.collection__title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 41,92px; 
+    letter-spacing: 0.5px;
+    text-align: left;
+    color:  #212A2F;
+}
+
+.collection__item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    width: 1236px;
+    margin-top: 24px;
+}
+
+.inner__title {
+    font-size: 22px;
+    font-weight: 700;
+    line-height:29,04px;
+    letter-spacing: 0.5px;
+    color:  #212a2f;
+
+    vertical-align: top;
+
+    padding: 17px 0 10px 0;
+}
+
+.inner__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color:  #212a2f;
+
+    text-align: Left;
+    vertical-align: top;
+}
+
+.text {
+    padding-left: 15px;
 }
