--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -327,12 +327,12 @@ body {
     margin-bottom: 45px;
 }
 
-/* SECTION__NATURAL */
-.section__natural {
+/* SECTION COVER */
+.section__cover {
     display: inline-block;
 }
 
-.natural__title {
+.cover__title {
     font-size: 32px;
     font-weight: 700;
     line-height: 41,92px;
@@ -341,7 +341,7 @@ body {
     text-align: center;
 }
 
-.natural__subtitle {
+.cover__subtitle {
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
@@ -353,7 +353,7 @@ body {
     margin-bottom: 26px;
 }
 
-.button__natural {
+.button__cover {
     width: 384px;
     height: 48px;
     background-color:#212A2F;
@@ -364,7 +364,7 @@ body {
     transform: translate(-50%, 0);
 }
 
-.button__natural:hover {
+.button__coverl:hover {
     width: 384px;
     height: 48px;
     background-color:rgb(204, 156, 110);
@@ -390,7 +390,7 @@ button a {
 .section__arrivals {
     width: 1440px;
     margin-top: 120px;
-    margin-bottom: 134px;
+    margin-bottom: 138px;
 }
 
 .container__coll {
@@ -446,4 +446,75 @@ button a {
     width: 396px;
     height: 396px;
     background-color: rgba(241, 241, 241, 0.925);
+}
+
+/* COVER */
+.cover__4 {
+    width: 100%;
+    height: 542px;
+
+    background: url("../images/cover-4.jfif") center no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+
+    margin-bottom: 52px;
+}
+
+/* SECTION__COVER */
+.section__cover {
+    display: inline-block;
+}
+
+.cover__title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 41,92px;
+    letter-spacing: 0.5px;
+    color:  #212a2f;
+    text-align: center;
+}
+
+.cover__subtitle {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    color:  #212a2f;
+    text-align: center;
+
+    margin-top: 22px;
+    margin-bottom: 26px;
+}
+
+.button__cover {
+    width: 384px;
+    height: 48px;
+    background-color:#212A2F;
+    border: none;
+
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+.button__cover:hover {
+    width: 384px;
+    height: 48px;
+    background-color:rgb(204, 156, 110);
+    border: none;
+
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, 0);
+}
+
+button a {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 16,41px;
+    letter-spacing: 2px;
+    color:  #fff;
+    
+    text-transform: uppercase;
+    text-decoration: none; 
 }
