--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -473,9 +473,15 @@ button a {
     width: 588px;
     height: 48px;
     background-color: #fff;
-    border: 1px solid #fff;
+    border-top: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #fff;
+    border-bottom: 3px solid #212A2F;
+
     border-radius: 0;
     vertical-align: middle;
+
+    margin-right: 12px;
 }
 
 input {
@@ -484,7 +490,7 @@ input {
     line-height: 24px;
     font-weight: 400;
     color: #737373;
-    padding: 0 0 0 20px;
+    padding: 0 0 0 65px;
     outline: none;
 }
 
@@ -506,6 +512,7 @@ input {
     
     color:  #74797C;
     text-align: center;
+
 }
 
 
@@ -538,7 +545,6 @@ footer {
     color: #fff;
 }
 
-
 .info__text {
     font-size: 12px;
     font-weight: 400;
@@ -563,7 +569,6 @@ footer {
     color: #fff;
     margin-left: 20px;
 }
-
 
 .follow__text {
     font-size: 12px;
