--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -13,6 +13,8 @@ body {
     font-family: 'Roboto', sans-serif;;
 }
 
+
+/* HEADER */
 .header {
     display: flex;
     flex-direction: row;
@@ -28,17 +30,20 @@ body {
 .header__inner {
     display: flex;
     flex-direction: row;
-       
+           
     margin-top: 21px;
     margin-bottom: 18px;
+    
+    align-items: center;
 }
 
+/* nav */
 .nav {
-    
     font-size: 12px;
     font-weight: 400;
     text-transform: uppercase;
-    letter-spacing: 1.7px;
+    letter-spacing: 1.7px;  
+    right: 30px;
 }
 
 .nav a {
@@ -47,18 +52,32 @@ body {
     margin-left: 27px;
 }
 
+/* logo */
+.logo {
+    display: block;
+    margin: 0 auto;
+}
+
+/* nav-_2 */
 .nav__2 {
-    
     font-size: 12px;
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 1.7px;
+    margin-right: 25px;
 }
 
 .nav__2 a {
     text-decoration: none;
     color: #212A2F;
     margin-left: 27px;
+}
+
+/* icon */
+.icon__logo {
+    display: flex;
+    justify-content: space-between;
+    width: 120px;
 }
 
 
@@ -155,6 +174,7 @@ body {
     padding: 16px 32px;
 }
 
+
 /* COVER */
 .cover__2 {
     width: 100%;
@@ -166,6 +186,7 @@ body {
 
     margin-top: 142px;
 }
+
 
 /* SECTION SEASONS */
 .section__seasons {
@@ -199,7 +220,8 @@ body {
     padding-top: 54px;
 }
 
-/* BUTTONS */
+
+/* BUTTONS - section seasons */
 .buttons {
     display: flex;
     flex-direction: row;
@@ -257,6 +279,7 @@ body {
     text-align: center;
     padding: 18px 32px;
 }
+
 
 /* COLLECTION */
 .section__collection {
@@ -327,6 +350,7 @@ body {
     margin-bottom: 45px;
 }
 
+
 /* SECTION COVER */
 .section__cover {
     display: inline-block;
@@ -386,6 +410,7 @@ button a {
     text-decoration: none; 
 }
 
+
 /* ARRIVALS */
 .section__arrivals {
     width: 1440px;
@@ -399,6 +424,7 @@ button a {
     background-color: rgba(241, 241, 241, 0.925);
 }
 
+
 /* COVER */
 .cover__4 {
     width: 100%;
@@ -410,6 +436,7 @@ button a {
 
     margin-bottom: 52px;
 }
+
 
 /* SECTION__COVER */
 
@@ -446,12 +473,14 @@ button a {
     text-decoration: none; 
 }
 
+
 /* STORIES*/
 .section__stories {
     width: 1440px;
     margin-top: 120px;
     margin-bottom: 138px;
 }
+
 
 /* SIGN UP */
 .section__cover {
