--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -324,36 +324,6 @@ body {
     padding: 18px 32px;
 }
 
-.card__inner:hover .card__images {
-    transform: translate3d(-10px, -10px, 0);
-}
-
-.card__inner:hover .inner__buttons {
-    transform: translate3d(-10px, -10px, 0);
-}
-
-.card__inner:hover .card__images {
-    opacity: .8;
-}
-
-.card__images {
-    transition: .2s linear;
-}
-
-.card__images__images {
-    display: block;
-    transition: opacity .1s linear;
-}
-
-.inner__buttons {
-    transition: .2s linear;
-}
-
-.inner__buttons__buttons {
-    display: block;
-    transition: opacity .1s linear;
-}
-
 
 /* COVER */
 .cover__2 {
@@ -523,7 +493,7 @@ body {
     width: 100%;
     height: 545px;
 
-    background: url("../images/cover-3.jfif") center no-repeat;
+    background: url("../images/cover-3.jpg") center no-repeat;
     -webkit-background-size: cover;
     background-size: cover;
 
