--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -80,6 +80,15 @@ body {
     width: 120px;
 }
 
+/* burger */
+.burger {
+    width: 60px;
+    height: 30px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
 
 /* MAIN */
 .section__main {
@@ -788,3 +797,6 @@ footer {
     padding-bottom: 90px;
     text-align: center;
 }
+
+
+/* MEDIA */
