--- a/assets/styles/slyle.css
+++ b/assets/styles/slyle.css
@@ -90,6 +90,13 @@ body {
     justify-content: space-between;
 }
 
+.line__burger {
+    width: 100%;
+    height: 3px;
+    background-color: #212A2F;
+}
+
+
 /* MAIN */
 .section__main {
     width: 100%;
@@ -800,3 +807,14 @@ footer {
 
 
 /* MEDIA */
+
+@media screen and (max-width:864px) {
+    
+    .nav, .nav__2, .icon__logo {
+        display: none;
+    }
+
+    .burger {
+        display: flex;
+    }
+}
